--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ author:
   keybase          :
   instagram        : 
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/pengzhi-gao/"
+  linkedin         : "pengzhi-gao"
   orcid            : 
   pinterest        :
   soundcloud       :
