--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ analytics:
 # Site Author
 author:
   name             : "Pengzhi Gao"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "ECSE PHD student at Rensselaer Polytechnic Institute"
   location         : "Troy, New York"
   employer         : 
