--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,7 +19,7 @@ main:
 #    url: /year-archive/
     
   - title: "Resume"
-    url: /resume/
+    url: /cv/
     
 #  - title: "Guide"
 #    url: /markdown/
