--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "Publications"
     url: /publications/
     
-  - title: "Projects"
-    url: /projects/    
+#  - title: "Projects"
+#    url: /projects/    
 
 #  - title: "Talks"
 #    url: /talks/    
@@ -12,8 +12,8 @@ main:
 #  - title: "Teaching"
 #    url: /teaching/    
     
-#  - title: "Portfolio"
-#    url: /portfolio/
+  - title: "Projects"
+    url: /portfolio/
         
 #  - title: "Blog Posts"
 #    url: /year-archive/
