--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,5 +24,5 @@ main:
 #  - title: "Guide"
 #    url: /markdown/
 
-  - title: "Miscellaneous"
-    url: /miscellaneous/
+#  - title: "Miscellaneous"
+#    url: /miscellaneous/
