--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,7 @@
 # main links links
 main:
   - title: "Publications"
-    url: /publications/
-    
-#  - title: "Projects"
-#    url: /projects/    
+    url: /publications/   
 
 #  - title: "Talks"
 #    url: /talks/    
@@ -14,12 +11,12 @@ main:
     
   - title: "Projects"
     url: /projects/
-        
-#  - title: "Blog Posts"
-#    url: /year-archive/
     
   - title: "Resume"
     url: /resume/
+    
+  - title: "Blog Posts"
+    url: /year-archive/
     
 #  - title: "Guide"
 #    url: /markdown/
