--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ author:
   name             : "Pengzhi Gao"
   avatar           : "profile.jpg"
   bio              : "ECSE PHD student at Rensselaer Polytechnic Institute"
-  location         : "Troy, New York"
+  location         : "Pittsburgh, Pennsylvania"
   employer         : 
   googlescholar    : "https://scholar.google.com/citations?user=r-eKI0oAAAAJ&hl=en"
   email            : 
