--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Pengzhi Gao"
 title_separator          : "-"
 name                     : &name "Pengzhi Gao"
-description              : &description "ECSE PHD student at Rensselaer Polytechnic Institute"
+description              : &description "Data Scientist at Petuum"
 url                      : https://gpengzhi.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "gpengzhi/gpengzhi.github.io"
