--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 author:
   name             : "Pengzhi Gao"
   avatar           : "profile.jpg"
-  bio              : "ECSE PHD student at Rensselaer Polytechnic Institute"
+  bio              : "Data Scientist at Petuum"
   location         : "Pittsburgh, Pennsylvania"
   employer         : 
   googlescholar    : "https://scholar.google.com/citations?user=r-eKI0oAAAAJ&hl=en"
