--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Pengzhi Gao"
 title_separator          : "-"
 name                     : &name "Pengzhi Gao"
-description              : &description "Data Scientist at Petuum Inc."
+description              : &description "Data Scientist at Petuum, Inc."
 url                      : https://gpengzhi.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "gpengzhi/gpengzhi.github.io"
@@ -79,7 +79,7 @@ analytics:
 author:
   name             : "Pengzhi Gao"
   avatar           : "profile.jpg"
-  bio              : "Data Scientist at Petuum Inc."
+  bio              : "Data Scientist at Petuum, Inc."
   location         : "Pittsburgh, Pennsylvania"
   employer         : 
   googlescholar    : "https://scholar.google.com/citations?user=r-eKI0oAAAAJ&hl=en"
