--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Pengzhi Gao"
 title_separator          : "-"
 name                     : &name "Pengzhi Gao"
-description              : &description "Staff Research Engineer at Baidu Inc."
+description              : &description "Staff Research & Development Engineer at Baidu Inc."
 url                      : https://gpengzhi.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "gpengzhi/gpengzhi.github.io"
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Pengzhi Gao"
   avatar           : "profile.jpg"
-  bio              : "Staff Research Engineer at Baidu Inc."
+  bio              : "Staff Research & Development Engineer at Baidu Inc."
   location         : "Beijing, China"
   employer         :
   pubmed           :
