--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Beijing, China"
   employer         :
   pubmed           :
-  googlescholar    : "https://scholar.google.com/citations?user=r-eKI0oAAAAJ&hl=en"
+  googlescholar    : 
   email            :
   uri              :
   bitbucket        :
