--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Ren Wang"
 title_separator          : "-"
 name                     : &name "Ren Wang"
 description              : &description "Postdoctoral Researcher at University of Michigan"
-url                      : https://gpengzhi.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://wangren09.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "wangren09/wangren09.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
