--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ren Wang"
-  avatar           : "profile.jpg"
+  avatar           : "renwang.jpeg"
   bio              : "Postdoctoral Researcher at University of Michigan"
   location         : "Ann Arbor, Michigan, US"
   employer         :
