--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Ann Arbor, Michigan, US"
   employer         :
   pubmed           :
-  googlescholar    : 
+  googlescholar    : "https://scholar.google.com/citations?user=TY_3K48AAAAJ&hl=en"
   email            :
   uri              :
   bitbucket        :
