--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Ren Wang"
 title_separator          : "-"
 name                     : &name "Ren Wang"
-description              : &description "Postdoctoral Researcher at University of Michigan"
+description              : &description "Assistant Professor, Department of Electrical and Computer Engineering, Illinois Institute of Technology"
 url                      : https://wangren09.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "wangren09/wangren09.github.io"
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Ren Wang"
   avatar           : "renwang.jpeg"
-  bio              : "Postdoctoral Researcher at University of Michigan"
-  location         : "Ann Arbor, Michigan, US"
+  bio              : "Assistant Professor, Department of Electrical and Computer Engineering, Illinois Institute of Technology"
+  location         : "Chicago, IL, US"
   employer         :
   pubmed           :
   googlescholar    : "https://scholar.google.com/citations?user=TY_3K48AAAAJ&hl=en"
