--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Ren Wang"
 title_separator          : "-"
 name                     : &name "Ren Wang"
-description              : &description "Assistant Professor, Department of Electrical and Computer Engineering, Illinois Institute of Technology"
+description              : &description "Assistant Professor, ECE Department, Illinois Tech"
 url                      : https://wangren09.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "wangren09/wangren09.github.io"
