--- a/_config.yml
+++ b/_config.yml
@@ -95,13 +95,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "wangren09"
+  github           : #"wangren09"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "ren-wang-715525106"
+  linkedin         : #"ren-wang-715525106"
   orcid            : 
   pinterest        :
   soundcloud       :
