--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ren Wang"
-  avatar           : "Suit_Grey_RenWang.jpg"
+  avatar           : "Ren.jpg"
   bio              : "Assistant Professor"
   location         : "Chicago, IL, US"
   employer         :
